UniversityCRM/force-app/main/default/objects/Course__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <label>Academic Year</label>
    <length>9</length>
    <type>Text</type>
</CustomField>