UniversityCRM/force-app/main/default/objects/Course__c/fields/Course_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_End_Date__c</fullName>
    <label>Course End Date</label>
    <type>Date</type>
</CustomField>