UniversityCRM/force-app/main/default/objects/Course__c/fields/Course_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Course External Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>