UniversityCRM/force-app/main/default/objects/Course__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <length>70</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>