UniversityCRM/force-app/main/default/objects/Course__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Psychology</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>