UniversityCRM/force-app/main/default/objects/Course__c/fields/Total_students_enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_students_enrolled__c</fullName>
    <label>Total students enrolled</label>
    <summaryForeignKey>Enrollment__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>