UniversityCRM/force-app/main/default/objects/Course__c/validationRules/Max_capacity_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_capacity_check</fullName>
    <active>true</active>
    <description>Max capacity should be &gt; 0</description>
    <errorConditionFormula>Max_Capacity__c &lt;= 0</errorConditionFormula>
    <errorMessage>Max capacity should be &gt;= 0</errorMessage>
</ValidationRule>